# pyproject-dependencies

./: README.md  default.nix  flake.nix  pyproject.toml
pyproject_dependencies/: main.py
